# Quiet-zone-testing-software

./: .gitignore  README.md  pyproject.toml  run.py
LCD_LINK/: README.md  pyproject.toml
LCD_LINK/src/lcd_link/: __init__.py  __main__.py  app.py  controller.py  routing.py  service.py  window.py
LCD_LINK/src/lcd_link/resources/: __init__.py
catr_loss_calibrator/: README.md  pyproject.toml
catr_loss_calibrator/docs/: CATR_CHAMBER_CALIBRATION_TEST_PLAN.html  CATR_CHAMBER_CALIBRATION_TEST_PLAN.md  CATR_CHAMBER_CALIBRATION_TEST_PLAN_TODO.md  CATR_CHAMBER_OPERATION_PLAYBOOK.md  CATR_CHAMBER_OPERATION_SUMMARY.md  CATR_LOSS_CALIBRATION_DEVELOPMENT_TODO.md  CATR_LOSS_CALIBRATION_FILE_MANAGEMENT_PLAN.md  CATR_LOSS_CALIBRATION_HISTORY_PLAYBOOK.md  CATR_LOSS_CALIBRATION_LINK_CONFIG_JSON.md  CATR_LOSS_CALIBRATION_RESUME_PLAN.md  CATR_LOSS_CALIBRATION_SOFTWARE_DESIGN.md  CATR_LOSS_CALIBRATION_TASK_PROGRESS.md  CATR_LOSS_CALIBRATION_UI_DESIGN.md  CATR_LOSS_CALIBRATION_UI_TODO.md  DOCS_NAMING_STRUCTURE_PLAN.md  HARDWARE_VALIDATION_CHECKLIST.md  README.md  REPORT_SCREENSHOT_CHECK_PLAYBOOK.md
catr_loss_calibrator/src/catr_loss_calibrator/: __init__.py  __main__.py  runtime_resources.py
catr_loss_calibrator/src/catr_loss_calibrator/app/: main.py  (+1 more)
catr_loss_calibrator/tests/: conftest.py  test_calibration_catalog.py  test_formulas.py  test_hardware_validation.py  test_instrument_management.py  test_link_management.py  test_loss_file_policy.py  test_mock_runner.py  test_p5_reporting.py  test_presentation_gui_smoke.py  test_presentation_viewmodels.py  test_project_boundaries.py  test_pyvisa_vna.py  test_resume.py  test_runtime_resources.py  test_scpi_session.py  test_storage_models.py  test_workspace_management.py
catr_loss_calibrator/unused/metadata/: LINK-CAL-001_CAL001-AUX_AUX-A.json
(+301 files in other folders)
