[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiet-zone-tester"
version = "0.1.0"
description = "Microwave anechoic chamber quiet-zone test application"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.24",
    "pyqtgraph>=0.13",
    "matplotlib>=3.7",
    "pyvisa>=1.14",
    "pyserial>=3.5",
]

[project.scripts]
quiet-zone-tester = "quiet_zone_tester.main:Main"

[tool.setuptools.packages.find]
where = ["src"]
