[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcd-link"
version = "0.1.0"
description = "Standalone LCD74000F link-box controller and control window"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pyserial>=3.5",
]

[project.scripts]
lcd-link-control = "lcd_link.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lcd_link = ["resources/*"]
